--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
           "type": "git",
           "url": "https://github.com/utilcode/simple-template.git"
     },
-    
     "keywords": [
-          "officiis",
-    ],
-
-  "dependencies": {
-  },
+        "add",
+        "cli",
+        "command",
+        "keys",
+        "keyword",
+        "keywords",
+        "line",
+        "package",
+        "pkg"
+      ],
 
 }
