--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
           "type": "git",
           "url": "https://github.com/utilcode/simple-template.git"
     },
-    "keywords": [
+    "keywords": [{
         "promise",
         "async",
         "UnhandledPromiseRejectionWarning",
         "PromiseRejectionHandledWarning"
-      ],
+    }],
 
 }
