--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
           "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
+    "keywords": [
+        "promise"
+    ],
     "license": "MIT",
     "repository": {
           "type": "git",
           "url": "https://github.com/utilcode/simple-template.git"
     },
-    "keywords": [{
-        "promise",
-        "async",
-        "UnhandledPromiseRejectionWarning",
-        "PromiseRejectionHandledWarning"
-    }],
+    
 
 }
