--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-    "name": "@test/simple-template",
-    "version": "1.0.15",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-          "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "MIT",
-    "repository": {
-          "type": "git",
-          "url": "https://github.com/utilcode/simple-template.git"
-    },
-    
-
+  "name": "@test/simple-template",
+  "version": "1.0.15",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/utilcode/simple-template.git"
+  },
+    "keywords": [
+    "npm",
+    "package",
+    "api-chatfanpagefb"
+  ],
+  "dependencies": {
+  }
 }
